--- a/nodejs/provisioning/playbook.yml
+++ b/nodejs/provisioning/playbook.yml
@@ -12,11 +12,13 @@
     - name: Import Remi GPG key.
       rpm_key:
         key: "https://rpms.remirepo.net/RPM-GPG-KEY-remi"
+        validate_certs: no
         state: present
 
     - name: Install Remi repo.
       yum:
         name: "https://rpms.remirepo.net/enterprise/remi-release-7.rpm"
+        validate_certs: no
         state: present
 
     - name: Ensure firewalld is stopped (since this is a test server).
